# azure-sphere-tools

./: .gitignore  README.md  SECURITY.md  nuget.config.internal
.azuredevops/: build.yml
.github/workflows/: build_validation.yml  check.yml
Manufacturing/Manufacturing_Tools/: device_ready.py  multi_board_recovery.py
Manufacturing/src/CSharp/Nuget/Package/: Devices.cs  Image.cs  Manufacturing.cs  Microsoft.Azure.Sphere.DeviceAPI.csproj  RestUtils.cs  Sideload.cs  Utils.cs
Manufacturing/src/CSharp/Nuget/Package/docs/: README.md
Manufacturing/src/CSharp/Nuget/Tests/DeviceAPITest/DeviceAPITest/: DeviceAPITest.csproj
Manufacturing/src/CSharp/Nuget/Tests/DeviceAPITest/DeviceAPITest/AppTests/: GetMemoryStatistics.cs
Manufacturing/src/CSharp/Nuget/Tests/DeviceAPITest/DeviceAPITest/Helpers/: Utilities.cs
Manufacturing/src/Python/device_api_sample/: display_ip_deviceid.py
Manufacturing/src/Python/package/: README.md  pyproject.toml  setup.py
Manufacturing/src/Python/package/azuresphere_device_api/: __init__.py  devices.py  manufacturing.py  utils.py  validation.py
Manufacturing/src/Python/package/package_tests/tests/functionality_tests/: test_version_number_consistency.py
Manufacturing/src/Python/package/package_tests/tests/utils_tests/: test_request_timeout.py  test_sdk_path.py  test_sdk_version.py
ParseDeviceLog/: README.md
ParseDeviceLog/24.06/log_manifests/: azured_log_manifest.json  gatewayd_log_manifest.json  uidmap_log_manifest.json
scripts/: PackageBuild.psm1  build-csharp.ps1  build-python.ps1  build.ps1
scripts/build-container/: Dockerfile
(+19 files in other folders)
